[metadata]
name = adain
version = 0.1
description = AdaIN implementation
license = MIT
requires = 
    setuptools 
    wheel

[options]
packages = src
python_requires = >= 3.6
install_requires =
    black==22.1.0
    cachetools==5.0.0
    certifi==2021.10.8
    charset-normalizer==2.0.12
    click==8.0.4
    cycler==0.11.0
    fonttools==4.31.1
    google-auth==2.6.2
    google-auth-oauthlib==0.4.6
    grpcio==1.44.0
    idna==3.3
    importlib-metadata==4.11.3
    kiwisolver==1.4.0
    Markdown==3.3.6
    matplotlib==3.5.1
    mypy-extensions==0.4.3
    numpy==1.22.3
    oauthlib==3.2.0
    packaging==21.3
    pathspec==0.9.0
    Pillow==9.0.1
    platformdirs==2.5.1
    protobuf==3.19.4
    pyasn1==0.4.8
    pyasn1-modules==0.2.8
    pyparsing==3.0.7
    python-dateutil==2.8.2
    requests==2.27.1
    requests-oauthlib==1.3.1
    rsa==4.8
    six==1.16.0
    tensorboard==2.8.0
    tensorboard-data-server==0.6.1
    tensorboard-plugin-wit==1.8.1
    tomli==2.0.1
    torch==1.11.0+cu113
    torchvision==0.12.0+cu113 
    tqdm==4.63.0
    typing-extensions==4.1.1
    urllib3==1.26.9
    Werkzeug==2.0.3
    zipp==3.7.0